--- a/templates/shared/workdeck_project_title.ejs
+++ b/templates/shared/workdeck_project_title.ejs
@@ -2,6 +2,6 @@
   projectTitle = ''; 
 } %>
 
-<h4 class="fontWeight600 centerTxt"><%= projectTitle %></h4>
+<h4 class="fontWeight600"><%= projectTitle %></h4>
 
 
